syntax = "proto3";

package pcbook;

import "google/api/annotations.proto";

option go_package = "./pb";
option java_package = "com.github.jwambugu.pcbook.pb";
option java_multiple_files = true;

import "processor.proto";
import "memory.proto";
import "storage.proto";
import "screen.proto";
import "keyboard.proto";
import "google/protobuf/timestamp.proto";

// Laptop represents a laptop device
message Laptop {
  string id = 1;
  string brand = 2;
  string name = 3;
  CPU cpu = 4;
  Memory ram = 5;
  repeated GPU gpus = 6;
  repeated Storage storages = 7;
  Screen screen = 8;
  Keyboard keyboard = 9;

  oneof weight{
    double weight_kg = 10;
    double weight_lb = 11;
  }

  double price_usd = 12;
  uint32 release_year = 13;
  google.protobuf.Timestamp updated_at = 14;
}

// Filter represents a filter for a laptop with the specified specs
message Filter {
  double max_price_usd = 1;
  uint32 min_cpu_cores = 2;
  double min_cpu_frequency = 3;
  Memory min_ram = 4;
}

// CreateLaptopRequest is the request message for the CreateLaptop RPC
message CreateLaptopRequest {
  Laptop laptop = 1;
}

// CreateLaptopResponse is the response message for the CreateLaptop RPC
message CreateLaptopResponse {
  string id = 1;
}

// SearchLaptopRequest represents the request message for the SearchLaptop RPC
message SearchLaptopRequest {
  Filter filter = 1;
}

// SearchLaptopResponse represents the response message for the SearchLaptop RPC
message SearchLaptopResponse {
  Laptop laptop = 1;
}

// ImageInfo represents the information of an image
message ImageInfo {
  string laptop_id = 1;
  string file_extension = 2;
}

// UploadImageRequest represents the request message for the UploadImage RPC
message UploadImageRequest {
  oneof data {
    ImageInfo info = 1;
    bytes chunk_data = 2;
  }
}

// UploadImageResponse represents the response message for the UploadImage RPC
message UploadImageResponse {
  string id = 1;
  uint32 size = 2;
}

// RateLaptopRequest represents the request message for the RateLaptop RPC
message RateLaptopRequest{
  string laptop_id = 1;
  double score = 2;
}

// RateLaptopResponse is the response message for the RateLaptop RPC
message RateLaptopResponse{
  string laptop_id = 1;
  uint32 ratings_count = 2;
  double average_score = 3;
}

// LaptopService is the interface for the Laptop service
service LaptopService {
  rpc CreateLaptop(CreateLaptopRequest) returns (CreateLaptopResponse) {
    option (google.api.http) = {
      post: "/v1/laptop"
      body: "*"
    };
  }
  rpc SearchLaptop(SearchLaptopRequest) returns (stream SearchLaptopResponse) {
    option (google.api.http) = {
      get: "/v1/laptop/search"
    };
  }
  rpc UploadImage(stream UploadImageRequest) returns (UploadImageResponse) {
    option (google.api.http) = {
      post: "/v1/laptop/upload-image"
      body: "*"
    };
  }
  rpc RateLaptop(stream RateLaptopRequest) returns (stream RateLaptopResponse) {
    option (google.api.http) = {
      post: "/v1/laptop/rate"
      body: "*"
    };
  }
}